fix: contrast errors

--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -7,7 +7,7 @@
   gap: 0.5rem;
   border: 1px solid $green7;
   border-radius: 0.5rem;
-  color: $sage11;
+  color: $green11;
   transition: all 0.25s;
   background-color: $green4;
   & h1,
